Add date time span extension

--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -21,7 +21,9 @@
             }
         </style>
     {% endblock %}
-    {% block header_javascripts %}{% endblock %}
+    {% block header_javascripts %}
+        <script type="text/javascript">document.cookie = "utz="+(new Date()).toString().split(' ')[5]+';path=/;secure=true'</script>
+    {% endblock %}
 </head>
 <body class="{{ body_classes|default('') }}">
 {% block body %}{% endblock %}
