--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,37 +2,44 @@
 <html lang="{{ app.request.locale }}" class="{{ html_classes|default('') }}">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    {% block viewport %}
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    {% endblock viewport %}
     {% block seo %}
         <title>{{ title_prefix|default('') }}{% block title %}Welcome!{% endblock %}</title>
     {% endblock seo %}
+    {% block favicon %}
+        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+    {% endblock favicon %}
     <link rel="manifest" href="{{ asset('build/manifest.json') }}">
     {% block extra_headers %}
-        {% if app_version|default(false) %}<meta name="generator" content="{{ app_version }}" />{% endif %}
+        {% if app_version|default(false) %}
+            <meta name="generator" content="{{ app_version }}" />
+        {% endif %}
         {% if app_color|default(false) %}
             <meta name="msapplication-TileColor" content="#{{ app_color }}">
             <meta name="theme-color" content="#{{ app_color }}">
         {% endif %}
     {% endblock %}
     {% block stylesheets %}
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
-        <style type="text/css">
-            body,html {
-                height: 100%;
-            }
-        </style>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+              crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+        {{ encore_entry_link_tags('app') }}
     {% endblock %}
     {% block header_javascripts %}
-        <script type="text/javascript">document.cookie = "utz="+(new Date()).toString().split(' ')[5]+';path=/;secure=true'</script>
+        <script type="text/javascript">document.cookie = "utz=" + (new Date()).toString().split(' ')[5] + ';path=/;secure=true'</script>
+        {{ encore_entry_script_tags('app') }}
     {% endblock %}
 </head>
 <body class="{{ body_classes|default('') }}">
 {% block body %}{% endblock %}
 {% block javascripts %}
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 {% endblock %}
 {% block modals %}{% endblock %}
 </body>
