Initial styles and html to admin pages

--- a/templates/components/flash-message-alerts.html.twig
+++ b/templates/components/flash-message-alerts.html.twig
@@ -1,12 +1,10 @@
 {% if app.session.flashBag.peekAll|length %}
-<div class="fixed-top w-25 float-right m-5">
+<div class="fixed-top w-50 float-right m-5">
 {% for type, messages in app.session.flashbag.all %}
     {% for message in messages %}
         <div class="alert alert-{{ type|replace({'error':'danger'}) }} alert-dismissible fade show" role="alert">
             {{ message|raw }}
-            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-            </button>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
     {% endfor %}
 {% endfor %}
