--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,3 +1,4 @@
+{% deprecated 'The "@SfsCore/base.html.twig" template is deprecated, use "base.html.twig" in your project templates instead.' %}
 <!DOCTYPE html>
 <html lang="{{ app.request.locale }}" class="{{ html_classes|default('') }}">
 <head>
