--- a/templates/components/flash-message-alerts.html.twig
+++ b/templates/components/flash-message-alerts.html.twig
@@ -1,3 +1,4 @@
+{% deprecated 'The "@SfsCore/components/flash-message-alerts.html.twig" template is deprecated.' %}
 {% if app.session.flashBag.peekAll|length %}
 <div class="fixed-top w-50 float-right m-5">
 {% for type, messages in app.session.flashbag.all %}
